[tool.poetry]
name = "demo_custom_loss_metrics"
version = "0.1.0"
description = ""
authors = ["ababa831 <flvonlineconverter@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <=3.10"
tensorflow = "2.6.2"
numpy = ">=1.19.2,<1.20.0"
pandas = ">=1.0"
scikit-learn = "^1.0.2"
tqdm = "^4.62.3"
jupyterlab = "^3.2.5"
black = ">=20.8b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
